--- a/Neural Machine Translation/source code/Calculate_TQE.ipynb
+++ b/Neural Machine Translation/source code/Calculate_TQE.ipynb
@@ -113,11 +113,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "f5b916051ec391ef3c1c0123575e59cad2c35863d294dd079abc5845c0e5babb"
-  },
   "kernelspec": {
-   "display_name": "Python 3.6.13 ('pytorch')",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -131,7 +128,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
