--- a/Neural Machine Translation/source code/nmt_single.ipynb
+++ b/Neural Machine Translation/source code/nmt_single.ipynb
@@ -1002,7 +1002,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1016,7 +1016,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
